# ATEC

./: .gitignore  LICENSE  OVERVIEW.md  README.md  example.md  readme.md
source/atec_rl_lab/: pyproject.toml  setup.py
source/atec_rl_lab/atec_rl_lab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
source/atec_rl_lab/atec_rl_lab/algorithms/amp/: __init__.py  amp_ppo.py  discriminator.py  motion_loader_g1.py  replay_buffer.py
source/atec_rl_lab/atec_rl_lab/assets/: __init__.py
source/atec_rl_lab/atec_rl_lab/assets/objects/: __init__.py
source/atec_rl_lab/atec_rl_lab/assets/objects/task_b/: object.py
source/atec_rl_lab/atec_rl_lab/assets/objects/task_e/: basket.py  table.py
source/atec_rl_lab/atec_rl_lab/assets/robots/: __init__.py  b2.py  b2w.py  cfg.py  piper.py  tron1a.py
source/atec_rl_lab/atec_rl_lab/tasks/: __init__.py
source/atec_rl_lab/atec_rl_lab/tasks/task_a/: __init__.py  env_cfg.py  terrain.py
source/atec_rl_lab/atec_rl_lab/tasks/task_b/: __init__.py  env_cfg.py  terrain.py
source/atec_rl_lab/atec_rl_lab/tasks/task_base/: __init__.py  envs_base.py  envs_base_cfg.py  terrain_base.py
source/atec_rl_lab/atec_rl_lab/tasks/task_d/: __init__.py  env_cfg.py  terrain.py
source/atec_rl_lab/atec_rl_lab/tasks/task_e/: __init__.py  env_cfg.py  terrain.py
source/atec_rl_lab/atec_rl_lab/train/: __init__.py
source/atec_rl_lab/atec_rl_lab/train/act/: __init__.py
source/atec_rl_lab/atec_rl_lab/train/locomotion/: __init__.py
source/atec_rl_lab/atec_rl_lab/utils/: __init__.py  cartesian_controller.py
source/atec_rl_lab/config/: extension.toml
(+122 files in other folders)
